--- a/styles.css
+++ b/styles.css
@@ -52,8 +52,7 @@ header{
 
 .gallery{  
     padding-top: 50px;
-    padding-left: 200px;
-    padding-right: 200px; 
+    padding-left: 13em; 
 }
 
 
